Update Readme.md with results, added parallel stream, change collections size