@@ -5,16 +5,15 @@ import org.openjdk.jmh.annotations.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 public class CollectionVsStreamTest {
     @State(Scope.Benchmark)
     public static class ExecutionPlan {
-        @Param({"1024", "2048", "12582912", "15123456", "1147483646"})
-        public int size;
-        public List<Integer> testList;
+        @Param({"512", "1024", "65535", "1258291"})
+        int size;
+        List<Integer> testList;
 
-        @Setup(Level.Iteration)
+        @Setup(Level.Trial)
         public void setUp() {
             testList = new ArrayList<>(size);
             for (int i = 0; i < size; i++) {
@@ -29,7 +28,7 @@ public class CollectionVsStreamTest {
     @BenchmarkMode(Mode.AverageTime)
     @OutputTimeUnit(TimeUnit.NANOSECONDS)
     public List<Integer> plainJava(ExecutionPlan plan) {
-        List<Integer> resultList = new ArrayList<>();
+        List<Integer> resultList = new ArrayList<>(plan.size / 2);
 
         for (Integer number : plan.testList) {
             if (number % 2 == 0) {
@@ -49,6 +48,19 @@ public class CollectionVsStreamTest {
         return plan.testList.stream()
                 .filter(number -> number % 2 == 0)
                 .map(number -> number * 2)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Benchmark
+    @Fork(value = 1, warmups = 1)
+    @Warmup(iterations = 3)
+    @BenchmarkMode(Mode.AverageTime)
+    @OutputTimeUnit(TimeUnit.NANOSECONDS)
+    public List<Integer> streamParallelJava(ExecutionPlan plan) {
+        return plan.testList.stream()
+                .parallel()
+                .filter(number -> number % 2 == 0)
+                .map(number -> number * 2)
+                .toList();
     }
 }
